--- a/disasm/Makefile
+++ b/disasm/Makefile
@@ -1,3 +1,11 @@
+# RGBDS_PATH = "~/gbdev/rgbds/0.6.1/"
+
+OUTPUT_NAME = tetris
+
+ifdef BUILD_MEGADUCK
+	RGBDS_ARG += -D TARGET_MEGADUCK
+endif
+
 OBJS = build/bank_000.o build/soundEngine.o
 BANK_0_FILES = \
 	code/BType.s \
@@ -17,35 +25,42 @@ OUTFILES = -n tetris.sym -m tetris.map
 all: tetris.gb
 
 build/titleScreen.2bpp: gfx/2bpp/titleScreen.png
-	rgbgfx -o $@ $< -x 9
+	$(RGBDS_PATH)rgbgfx -o $@ $< -x 9
 
 build/menuScreens.2bpp: gfx/2bpp/menuScreens.png
-	rgbgfx -o $@ $< -x 11
+	$(RGBDS_PATH)rgbgfx -o $@ $< -x 11
 
 build/%.2bpp: gfx/2bpp/%.png
-	rgbgfx -o $@ $<
+	$(RGBDS_PATH)rgbgfx -o $@ $<
 
 build/%.1bpp: gfx/1bpp/%.png
-	rgbgfx -d 1 -o $@ $<
+	$(RGBDS_PATH)rgbgfx -d 1 -o $@ $<
 
 build/wram.o: include/wram.s
-	rgbasm -h -L -o $@ $<
+	$(RGBDS_PATH)rgbasm $(RGBDS_ARG) -h -L -o $@ $<
 
 build/hram.o: include/hram.s
-	rgbasm -h -L -o $@ $<
+	$(RGBDS_PATH)rgbasm $(RGBDS_ARG) -h -L -o $@ $<
 
 build/bank_000.o: code/bank_000.s $(GFX_1BPP_OBJS) $(GFX_2BPP_OBJS) $(INCS) $(BANK_0_FILES)
-	rgbasm -h -L -o $@ $<
+	$(RGBDS_PATH)rgbasm $(RGBDS_ARG) -h -L -o $@ $<
 
 build/soundEngine.o: code/soundEngine.s $(INCS)
-	rgbasm -h -L -o $@ $<
+	$(RGBDS_PATH)rgbasm $(RGBDS_ARG) -h -L -o $@ $<
 
 tetris.gb: $(GFX_1BPP_OBJS) $(GFX_2BPP_OBJS) $(OBJS) $(RAM_OBJS)
-	rgblink $(OUTFILES) -w -o $@ $(OBJS) $(RAM_OBJS)
-	rgbfix -v -p 255 $@
-
+	$(RGBDS_PATH)rgblink $(OUTFILES) -w -o $@ $(OBJS) $(RAM_OBJS)
+# MegaDuck has no Header
+ifndef BUILD_MEGADUCK
+	$(RGBDS_PATH)rgbfix -v -p 255 $@
+endif
 	md5sum $@
+	mv -f tetris.gb tetris.duck
 
 clean:
-	rm -f tetris.gb tetris.sym tetris.map build/*
+	rm -f tetris.duck tetris.gb tetris.sym tetris.map build/*
 	find . \( -iname '*.1bpp' -o -iname '*.2bpp' \) -exec rm {} +
+
+megaduck:
+	${MAKE} BUILD_MEGADUCK=ON
+
