Build: Fix megaduck build path for gfx assets

--- a/disasm/Makefile
+++ b/disasm/Makefile
@@ -4,10 +4,12 @@ OUTPUT_NAME = tetris
 
 
 BUILD_PATH = build$(EXTRA_BUILD_PATH)
+RGBDS_ARG += -D BUILD_PATH=$(BUILD_PATH)
 
 ifdef BUILD_MEGADUCK
 	RGBDS_ARG += -D TARGET_MEGADUCK
 endif
+
 
 OBJS = $(BUILD_PATH)/bank_000.o $(BUILD_PATH)/soundEngine.o
 BANK_0_FILES = \
