--- a/disasm/Makefile
+++ b/disasm/Makefile
@@ -83,7 +83,7 @@ cleanduck:
 # Needs stock inside gadgets firmware to work, can use flashgbx ui to swap it out if needed
 # Make sure 32K cart is specified
 flashduck:
-	-cd tools/gbxcart_duck; ./gbxcart_rw_megaduck_32kb_flasher ../../build_duck/tetris.duck &
+	-cd ../tools/gbxcart_duck; ./gbxcart_rw_megaduck_32kb_flasher ../../disasm/build_duck/tetris.duck &
 
 
 
